Added "Bones" to homepage. Needs another page for teacher.

--- a/index.html
+++ b/index.html
@@ -6,16 +6,32 @@
         <title>Home Page</title>
         <meta name="Pathfinder Website Homepage" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="CSS/style.css">
     </head>
     <header>
-
+        <img src="img/placeholder.png" alt="img/placeholder.png">
+        <h5>Header</h5>
+        <nav>
+            <ul>
+                <li><a href="">Element</a></li>
+                <li><a href="">Element</a></li>
+                <li><a href="">Element</a></li>
+            </ul>
+        </nav>
     </header>
     <body>
-        
+        <div class="welcome">
+            <h2>Welcome!</h2>
+            <br>
+            Lorem ipsum etc etc etc etc
+
+        </div>
+
         <p>Hello World</p>
     </body>
+    <div>
+    <div>
     <footer>
-        
+        I am a footer. I exist to foot.
     </footer>
 </html>
