Added Login and Logout Pages. Need to finish basic styling.

--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="CSS/style.css">
     </head>
+
+    <!--Add space on the sides like how a word document does...-->
     <header>
         <img src="img/placeholder.png" alt="img/placeholder.png">
-        <h5>Header</h5>
+        <h5>Header(I serve a purpose)</h5>
         <nav>
             <ul>
-                <li><a href="">Element</a></li>
-                <li><a href="">Element</a></li>
+                <li><a href="ActionList.html">Actions</a></li>
+                <li><a href="">Log In</a></li>
                 <li><a href="">Element</a></li>
             </ul>
         </nav>
@@ -22,16 +24,53 @@
     <body>
         <div class="welcome">
             <h2>Welcome!</h2>
-            <br>
-            Lorem ipsum etc etc etc etc
+            <p>
+                Lorem ipsum etc etc etc etc
+            </p>
+        </div>
+        <div class="jumpTo">
+            <h2>What This page will cover</h2>
+            <!--This will be a set of buttons that will jump to certain sections of this page.-->
+            <ul>
+                <li><a>Explanation</a></li>
+                <li><a>Tutorial</a></li>
+                <li><a>Adapting to Your Sheet</a></li>
+                <li><a>Other Resources</a></li>
+            </ul>
+        </div>
+        <!--I like to give my divs class names to help differentiate the page a bit. I hope that is not bad.-->
+        <div class="explanation">
+            <h2>
+                What is &ltinsert website name here&gt?
+            </h2>
+            <p>
+                its this and that! Crazy Right?!
+            </p>
+        </div>
+        <div class="tutorial">
+            <h2>Getting Started</h2>
+            <p>this and that!</p>
+            <!--embed a small video showing how it works. Maybe a gif since it can loop over & over-->
+        </div>
+        <div class="customization">
+            <h2>Make it Your Own</h2>
+            <p>This goes over some features about my website that separates it from a wiki.</p>
 
         </div>
-
-        <p>Hello World</p>
+        <div class="helpfulTools">
+            <h3>Some Other Resources You Might Consider</h3>
+            <ul>
+                <li><a href="">Archives Of Nethys</a>: This explains it.</li>
+                <li><a href="">PathBuilder</a>: This explains it.</li>
+                <li><a href="">Pathfinder Nexus</a>: This explains it.</li>
+            </ul>
+        </div>
     </body>
     <div>
     <div>
     <footer>
-        I am a footer. I exist to foot.
+        <h4>&ltinsert website name here&gt</h4>
+        <p>Disclaimer</p>
+        <!--Teacher requires something in footer. Don't remember what...-->
     </footer>
 </html>
