Moving forward. minimal big decisions were made.

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Home Page</title>
         <meta name="Pathfinder Website Homepage" content="">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="CSS/style.css">
     </head>
-
     <!--Add space on the sides like how a word document does...-->
     <header>
-        <img src="img/placeholder.png" alt="img/placeholder.png">
-        <h5>Header(I serve a purpose)</h5>
+          <img src="img/placeholder.png" alt="img/placeholder.png">
         <nav>
             <ul>
                 <li><a href="ActionList.html">Actions</a></li>
@@ -22,8 +22,13 @@
         </nav>
     </header>
     <body>
-        <p>hi</p>
+        <div class="leftSpace">
+           <h1>Left Space</h1>
+        </div>
+
+        <main>
         <div class="welcome">
+            
             <h2>Welcome!</h2>
             <p>
                 Lorem ipsum etc etc etc etc
@@ -66,12 +71,16 @@
                 <li><a href="">Pathfinder Nexus</a>: This explains it.</li>
             </ul>
         </div>
+    </main>
+    <div class="rightSpace">
+        <h1>Right Space</h1>
+    </div>
     </body>
-    <div>
-    <div>
+
     <footer>
         <h4>&ltinsert website name here&gt</h4>
         <p>Disclaimer</p>
         <!--Teacher requires something in footer. Don't remember what...-->
     </footer>
+
 </html>
