Tweaked with the CSS. Still not happy with it.

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     </head>
     <!--Add space on the sides like how a word document does...-->
     <header>
-          <img src="public/img/placeholder.png" alt="img/placeholder.png">
+          <img src="public/img/ActionLibLOGOWIP.png" alt="img/placeholder.png">
         <nav>
             <ul>
-                <li><a href="ActionList.html">Actions</a></li>
-                <li><a href="login/login.html">Log In</a></li>
-                <li><a href="">Element</a></li>
+                <li><a href="pages/ActionList.html">Actions</a></li>
+                <li><a href="pages/login/login.html">Log In</a></li>
+                <li><a href="pages/glossary.html">Glossary</a></li>
             </ul>
         </nav>
     </header>
