Added Javascript functionality

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="public/CSS/style.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+
     </head>
     <!--Add space on the sides like how a word document does...-->
     <header>
@@ -21,15 +23,14 @@
         </nav>
     </header>
     <body>
-        <div class="leftSpace">
-           <h1>Left Space</h1>
-        </div>
+        <div class="leftSpace"></div>
 
         <main>
+
         <div class="welcome">
             
             <h2>Welcome!</h2>
-            <p>
+            <p id="poo">
                 Lorem ipsum etc etc etc etc
             </p>
         </div>
@@ -71,9 +72,7 @@
             </ul>
         </div>
     </main>
-    <div class="rightSpace">
-        <h1>Right Space</h1>
-    </div>
+    <div class="rightSpace"></div>
     </body>
 
     <footer>
