--- a/pages/glossary.html
+++ b/pages/glossary.html
@@ -6,10 +6,8 @@
     <title>Glossary</title>
     <link rel="stylesheet" href="../public/CSS/style.css">
 </head>
-<header>
     <header>
         <img src="../public/img/ActionLibLOGOWIP.png" alt="img/placeholder.png">
-
       <nav>
           <ul>
               <li><a href="../index.html">Home</a></li>
@@ -18,10 +16,43 @@
           </ul>
       </nav>
   </header>
-</header>
 <body>
+    <div class="leftSpace"></div>
     <main>
-        
+        <h1><b>Glossary</b></h1>
+        <p>This will provide a short explination as to what each tag used in the action list means.
+        </p>
+        <div class="glossary">
+        <ul class="nodotsul">
+            <li id="attack">
+                <h2>Attack</h2>
+                <p>
+                    An ability with this trait involves an attack. For each attack you make beyond the first on your turn, you take a multiple attack penalty.
+                    (-5 to hit on the next strike made and -10 on the third. This bonus cannot exceed -10.)
+                </p>
+            </li>
+            <li id="manipulate">
+                <h2>Manipulate</h2>
+                <p>
+                   You must physically manipulate an item or make gestures to use an action with this trait.
+                   Creatures without a suitable appendage can’t perform actions with this trait. 
+                   Manipulate actions often trigger reactions.
+                </p>
+            </li>
+            <li id="move">
+                <h2>Move</h2>
+                <p>
+                    An action with this trait involves moving from one space to another.
+                </p>
+            </li>
+
+        </ul>
+    </div>
+        <div class="endSpace"></div>
     </main>
+    <div class="rightSpace"></div>
 </body>
+<footer>
+
+</footer>
 </html>
