--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -14,7 +14,7 @@
             <!--ADJUST WRAPPER FOR PROPER POSITIONING-->
             <!-- embed an oopsie box here so it will be with the login box.-->
         <div class = "inputBox">
-            <form method = "post" action = "../controllers/Users.php">
+            <form method = "post" action = "">
                 <input type= "hidden" name = "type" value = "login">
                 <h2>Login</h2>
                 <!--Note to self, Don't change name of the inputs!!-->
@@ -24,6 +24,8 @@
                 <input type = "submit" value = "Login"><br><br>
 
                 <a href = "signup.html" class = "clickable">No account? Create one here!</a>
+                <p class="error">Currently not functional. Under construction.</p>
+                <button><a href="../../index.html">Press me to leave</a></button>
 
         </div>
         </div>
