--- a/pages/login/signup.html
+++ b/pages/login/signup.html
@@ -6,9 +6,20 @@
     <link rel="stylesheet" href="../../public/CSS/style.css">
     <title>Sign Up</title>
 </head>
+<!--Remove built-in style-->
+<style>
+body{
+    display:flex;
+    flex-direction: column;
+}
+button{
+    width:10%;
+}
+</style>
 <body>
-    hey. Ya found me.
     <h4>Already have an account?</h4>
     <a href="login.html" class ="clickable">Click here to sign in.</a>
+    <p class="error">Currently not functional. Under construction.</p>
+    <button><a href="../../index.html">Press me to leave</a></button>
 </body>
 </html>
