Fixed last-minute footer format issue

--- a/index.html
+++ b/index.html
@@ -131,10 +131,11 @@
     </body>
     
     <footer>
-        <h4>&ltinsert website name here&gt</h4>
-        <p>Disclaimer</p>
-        <!--Teacher requires something in footer. Don't remember what...-->
-        <p class="subtext">Action Lib was created by Guillermo Perez.</p>
+        <p class="subtext">
+            Action Lib was created by Guillermo Perez.
+            <br> 
+            Disclaimer: still in development. Not all features may work yet.
+        </p>
     </footer>
 
 </html>
